--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -89,39 +89,37 @@
            
         <% else %>
             
-            <div> Message me </div>
+           
         
       <% end %>
 
     <div id="t_backdrop">
       <div class="col-md-9" id="thumbnail_p">
         <% @products.each do |product| %>
-          <div class="col-md-3">
-            <div class="thumbnail">
-            <%= link_to product do %>
-               <%= image_tag(product.image.url(:thumb), :class => "thumbs") %>
-            <% end %>
-              <div class="caption" align="center">
-                <h3><%= product.title %></h3>
-                <p><%= number_to_currency(product.price) %></p>
-                <p><%= link_to product.category.name %></p>
-               
-                <p><em>Sold By:</em> <%= link_to product.user.profile.username, profile_path(current_user) %></p>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                    Action <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to "View", product, class: "btn btn-link" %></li>
-                    <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
-                    <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
-                  </ul>
-                </div>
+          <% if product.user.id == @profile.user.id %>
+
+                <%= image_tag product.image.url(:medium), class: "product-overview-image" %>
+                    <h4 class="font-heading pt-2">
+                      <%= product.title %>
+                    </h4>
+                    <p>
+                      <%= product.price %>
+                    </p>
+                <%= link_to "View Details", product, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      Action <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><%= link_to "View", product, class: "btn btn-link" %></li>
+                      <li><%= link_to "Edit", edit_product_path(business), class: "btn btn-link" %></li>
+                      <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+                    </ul>
+                  </div>
               </div>
-            </div>
-          </div>
-          
-        <% end %> 
+                  
+          <% end %>
+        <% end %>
       </div>
     </div> 
 
