--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+     <div class="col-md-12 center" align="center">
      <div id="edit">    
 
         <h2>Edit <%= resource_name.to_s.humanize %></h2>
@@ -48,5 +49,6 @@
 
         <%= link_to "Back", :back %>
     </div>
+  </div>
   </div>
 <form-group
