--- a/app/views/products/_color_variant_fields.html.erb
+++ b/app/views/products/_color_variant_fields.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<%= form.label :color %>
-		  		<%= form.text_field :color, class: "form-control" %>
+		  		<%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], class: "form-control" %>
 
 
 			</div>
@@ -17,9 +17,9 @@
 
 
 
-		<%= form.fields_for :size_variants do |builder| %>
+		<%= form.simple_fields_for :size_variants do |builder| %>
 		  <div class="row">
-		  			  <%= render 'size_variant_fields', form: builder %>
+		  			  <%= render 'size_variant_fields', f: builder %>
 		  </div>
 
 
