--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
-      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
+      <%= simple_form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
       
         <% if product.errors.any? %>
           <div id="error_explanation">
@@ -60,7 +60,7 @@
         <div>
           <h4>Add the available color, sizes on hand for that color, and stock quantity for each size of your product. </h4>
         
-          <%= form.fields_for :color_variants do |builder| %>
+          <%= form.simple_fields_for :color_variants do |builder| %>
               <div class="row" align="center">
                  <%= render 'color_variant_fields', form: builder %>             
               </div>
