--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -4,7 +4,23 @@
       <%= image_tag @product.image.url, style: "width: 80%; height: 80%;" %>
     </div>
     <h3><%= @product.title %></h3>
-    <h4><%= number_to_currency(@product.price) %></h4>
+    <h4 id="price"><%= number_to_currency(@product.price) %></h4>
+    <h4 id="s_price"><%= number_to_currency(@product.shipping_cost) %></h4>
+    <h4 id="order_total">Total: $<span id="show_total"></span></h4>
+    <input type="submit" id="submit"></input> 
+
+    <script>
+            $(document).ready(function(){
+            document.getElementById('submit').onclick=function(){
+              var quantity = parseInt(document.getElementById('quantity').value)
+              var cost = <%= @product.price %>
+              var s_cost = <%= @product.shipping_cost %>
+              total = (cost + s_cost) * quantity
+              document.getElementById("show_total").innerText = total
+            };
+
+          });
+    </script>
   </div>
   <div class="col-md-5 pull-right">
 
@@ -16,6 +32,7 @@
         <%= hidden_field_tag "product_id", @product.id %>
         <%= hidden_field_tag 'stripeToken' %>
         <%= hidden_field_tag 'stripeEmail' %>
+
 
        
 
@@ -66,21 +83,51 @@
             <%= f.label :country, :style => "color: #D4AF37;" %>
             <%= f.country_select :country, {priority_countries: ["US"], include_blank: "select country"}, class: 'form-control' %>
           </div>
+          <div class="form-group">
+            <%= f.label :quantity, :style => "color: #D4AF37;" %>
+            <%= f.number_field :quantity, class: "form-control", id: "quantity" %>
+          
+          </div>
+
+          <div class="form-group">
+            <%= f.label :color %>
+            <%= select_tag(:color, options_for_select(@product.color_variants.pluck(:color)), :prompt => "Choose a Color", :class => "form-control") %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :size %>
+            <%= select_tag(:size, options_for_select(
+
+              @product.color_variants.each do |color_variant|
+                color_variant.size_variants.each do |size_variant|
+                  size_variant.try(:size)
+                end
+              end
+
+
+            ), :prompt => "Choose a Size", :class => "form-control") %>
+          </div>
+
 
 
                     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                             data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                            data-description="NAME: <%= @product.title %>, COLOR: <%= @product.color %> "
-                            data-amount="<%= (@product.price + @product.shipping_cost) * 100 %>"
+                            data-description="NAME: <%= @product.title %>"
+                            
                             <% if user_signed_in? %>
                               data-email="<%= current_user.email %>"
                             <% end %>
                             data-allow-remember-me="true"
                             data-locale="auto">
 
+                   
+
+
+
                     </script>
               
  <% end %>
+
     <script src="https://checkout.stripe.com/checkout.js"></script>
   </div>
 </div>
